added header to html

--- a/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/04-Apps-using-DOM-Concepts/02-ToDo-App/index.html
+++ b/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/04-Apps-using-DOM-Concepts/02-ToDo-App/index.html
@@ -97,6 +97,7 @@
                           id="modalDueDateInput"
                           class="form-control"
                           type="date"
+                          required
                         />
                         <span
                           id="dueDateErrorElement"
@@ -139,6 +140,9 @@
                 </div>
               </form>
             </div>
+          </div>
+          <div class="row">
+            <div class=""><h3>My Tasks</h3></div>
           </div>
           <div class="row tasks-container"></div>
         </div>
