added table of contents and image

--- a/05-Building-Web-Apps-With-JavaScript/02-ToDo-App/index.html
+++ b/05-Building-Web-Apps-With-JavaScript/02-ToDo-App/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Modal Popups Form</title>
+    <title>ToDo App</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -32,7 +32,7 @@
     <header>
       <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container">
-          <span class="navbar-brand">ToDo App Header</span>
+          <span class="navbar-brand">ToDo List App</span>
         </div>
       </nav>
     </header>
@@ -40,7 +40,7 @@
       <section class="border">
         <div class="container">
           <div class="row to-do-app-row box">
-            <h2>ToDo App</h2>
+            <h2>ToDo List App</h2>
           </div>
           <div class="row">
             <div>
